# herald

./: .coveragerc  .env.example  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  railway.toml
.github/workflows/: pylint.yml  tests.yml
herald/: __init__.py  app.py  context.py  herald_route.py  response_handles.py  usage_tracker.py
herald/context_manager/: __init__.py  icontext.py  prompt_based.py  rag.py  rag_based.py
herald/cv_parser/: __init__.py  iparser.py  linkedin.py
herald/storage/: __init__.py  r2.py
herald/toolkit/: __init_.py
tests/: __init__.py  conftest.py  test_app.py  test_context_manager.py  test_cv_parser.py  test_herald_route.py  test_integration.py  test_main.py  test_rag.py  test_storage.py
